klipper: fix clipboard popup not showing on the correct screen on X11

The popup size needs to be confined to the current screen area.

BUG: 495987
FIXED-IN: 6.4