klipper/declarative/qml/KlipperPopup.qml
@@ -19,6 +19,7 @@ PlasmaExtras.Representation {
     implicitWidth: 100 // A friendly initial size
     implicitHeight: 100
 
+    signal requestResizePopup()
     signal requestHidePopup()
 
     focus: true
@@ -43,6 +44,7 @@ PlasmaExtras.Representation {
                 // Break the bindings to avoid resizing loops due to screen changes
                 dialogItem.implicitWidth = Math.max(Kirigami.Units.gridUnit * 15, Math.min(dialogItem.Screen.width / 4, Kirigami.Units.gridUnit * 40));
                 dialogItem.implicitHeight = Math.min(dialogItem.Screen.height / 2, Kirigami.Units.gridUnit * 40);
+                dialogItem.requestResizePopup();
                 ((stack.initialItem as Private.ClipboardMenu).view as ListView).currentIndex = 0;
                 ((stack.initialItem as Private.ClipboardMenu).view as ListView).positionViewAtBeginning();
             }
